--- a/7 - Styliser les listes à puces en CSS/style1.css
+++ b/7 - Styliser les listes à puces en CSS/style1.css
@@ -12,33 +12,33 @@ ul{
     border-top : 5px solid transparent;
     border-bottom : 5px solid transparent;
     border-left : 5px solid black;
-   }
+}
    
-   .list2 > li:before {
-		content: "";
-    	border: 2px solid blue;
-    	display: inline-block;
-    	height: 3px;
-        width: 3px;
-    	vertical-align: middle;
-    	transform:rotate(45deg);
-    	margin-right: 5px;
-   }
+.list2 > li:before {
+    content: ""; /* Si content n'est pas défini ( même vide = défini ), le :before ne s'affichera pas*/
+    border: 2px solid blue;
+    display: inline-block;
+    height: 3px;
+    width: 3px;
+    vertical-align: middle;
+    transform:rotate(45deg);
+    margin-right: 5px;
+}
 
-    .list3 li{
-        margin-bottom: 5px;
-        counter-increment: count;
-    }
+.list3 li{
+    margin-bottom: 5px;
+    counter-increment: count;
+}
         
-    .list3 li:before{
-       content : counter(count);
-       display: inline-block;
-       width: 20px;
-       height: 20px;
-       border-radius: 50%;
-       background-color: blue;
-       text-align: center;
-       color: white;
-       font-weight: bold;
-       margin-right: 4px;
-         }
+.list3 li:before{
+    content : counter(count); /* pour afficher le compteur "count" défini dans le "ul"*/
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: blue;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    margin-right: 4px;
+}
