added state style

--- a/8 - Menu déroulant en CSS/style.css
+++ b/8 - Menu déroulant en CSS/style.css
@@ -30,3 +30,11 @@ a{
       .deroule a {
         color:white;
       }
+  
+/*Etat*/
+.menu > li:hover {
+border-bottom:2px solid teal;
+}
+.deroule li:hover {
+  background-color: skyblue;
+}
