--- a/15 - Personnaliser une checkbox en CSS/style.css
+++ b/15 - Personnaliser une checkbox en CSS/style.css
@@ -4,49 +4,33 @@ label {
   height: 20px;
 
 }
-
-/* 
-David: y'a un espace entre le haut de ta page et ton "label"
-Tu peux utiliser "display: none" si tu veux l'enlever au lieu de "opacity: 0"
-*/
 #switch {
-  opacity: 0; /*Pour rendre la checkbox native invisible*/
+  display:none; /*Pour rendre la checkbox native invisible*/
 }
-
-/* David: propriétés par défaut */
+/*Propriétés par défaut*/
 #switch ~ label::before {
+  margin: 10px;
   display:block;
-  content:"oui";
+  content:"OUI";
   background-color:green;
   width:80px;
   height: 20px;
+  padding-left : 3px;
+  padding-right:3px;
   transition: background-color 0.2s linear;
   text-align: right;
   padding-top:10px;
   cursor: pointer;
-  border-radius: 20%;
+  border-radius: 32%;
   color: white;
-  
+  font-weight: bold;
 }
-
-/* 
-David: propriétés qui changent quand "#switch" est "checked
-Tu peux simplifier ton code en ne modifiant que les propriétés qui changent et que tu "override"
-*/
 #switch:checked ~ label::before {
-  display: block;
-  content:"non";
+  content:"NON";
   background-color: red;
-  width:80px;
-  height: 20px;
-  transition: background-color 0.2s linear;
   text-align: left;
-  padding-top: 10px;
-  cursor: pointer;
-  border-radius: 20%;
-  color:white;
 }
-
+  
 #switch ~ label::after {
   content:"";
   position: absolute;
@@ -54,29 +38,12 @@ Tu peux simplifier ton code en ne modifiant que les propriétés qui changent et
   background-color: white;
   width: 30px;
   height:30px;
-  left:0;
-  right:40px;
-  top:14px;
+  top:8px;
+  left:2px; /* left: Positionné à 0px à gauche du dernier élément positionné */
   border: 2px grey solid;
   border-radius: 50%;
   transition: left 0.3s ease-in ;
 }
-
-/* 
-David: propriétés qui changent quand "#switch" est "checked
-Même chose que pour "::before"
-*/
 #switch:checked ~ label::after {
-  content:"";
-  position: absolute;
-  display: block;
-  background-color: white;
-  width: 30px;
-  height:30px;
-  left:60px;
-  right:0px;
-  top:14px;
-  border: 2px grey solid;
-  border-radius: 50%;
-  transition: left 0.3s ease-in ;
-}
+  left:66px;
+} 
