--- a/10 - Une image background en CSS/style.css
+++ b/10 - Une image background en CSS/style.css
@@ -5,21 +5,17 @@
 background-image: url(ciel.jpg);
 width: 100%;
 height:300px;
-position: absolute;
+background-position: center;
+background-repeat: no-repeat;
+text-align: center;
+color:white;
+padding:1px;
 }
 
-.header-title{
+.header-title {
     margin-top: 100px;
 }
 
 h1{
     font-family: 'Times New Roman', Times, serif;
-    color:white;
-    text-align: center;
-
-}
-
-p{
-    text-align: center;
-    color:white;
 }
