--- a/Exercice 1/style.css
+++ b/Exercice 1/style.css
@@ -49,7 +49,7 @@ article > div { margin-left: 8px; }
     }
 }
 
-@media screen and (min-width:640px) and (max-width:960px), (max-width:1280px) {
+@media screen and (min-width:640px) and (max-width:960px),(min-width:1280px) {
     #question_4 div {
         background-color:green;
     }
