--- a/Exercice 4/styles.css
+++ b/Exercice 4/styles.css
@@ -60,13 +60,17 @@ a {
 }
   
   /*3) Au survol augmentez la hauteur de l'entrée survolée (voir exemple dans resultat3.png)*/
-  
-  ul{
-    margin-top: 20px;
-    display: flex;
+  ul { 
+    display: flex; 
+    align-items: center;
+    justify-content:center; 
   }
-  li:hover {
-   transform:scaleY(2);
+  li { 
+    width:100%;
+    height: 75%; 
   }
-   
+  li:hover { 
+    height: 100%; 
+  }
+ 
    /* ul en flex pour centrer li, li à 75%, hover 100%*/
