--- a/Exercice 5/style.css
+++ b/Exercice 5/style.css
@@ -52,6 +52,60 @@ footer {
 
 
 /*Media queries - à vous re refactoriser le code pour que la page soit mobile first */
+/*Modifier le fichier style.css de sorte que:
+- au dessus de 480px de largeur d'écran:
+	* on affiche les 3 colonnes sur la même ligne
+	* le menu est affiché en ligne.*/
+
 @media screen and (min-width : 480px){
- 
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    border: none;
+    display: inline-block;
+  }
+  
+  li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 }
+#container {
+  text-align: center;
+}
+
+#container div {
+display: inline-block;
+width: 30%;
+}
+
+
+/*- au dessous de 480px de largeur d'écran
+	* on n'affiche qu'une seule colonne par ligne, avec les 3 lignes qui se suivent
+	* on affiche les 4 items du menu les uns en dessous des autres (un seul pr ligne)*/
+
+  @media screen and (min-width:0px) and (max-width:480px) {
+    li {
+      display:flex;
+      flex-direction: column;
+    }
+
+    #premiere,#seconde,#troisieme {
+      flex-direction: column;
+    }
+
+    #container div {
+    display:flex;
+    width:100%;
+}
+
+  }
