added bootstrap exercice + finish ex2

--- a/Exercice 1/style.css
+++ b/Exercice 1/style.css
@@ -37,7 +37,9 @@ article > div { margin-left: 8px; }
 
 @media screen and (max-width:960px) {
     #question_2  div {
+        flex-direction: column;
         width:100%;
+ 
 
     }
 }
