--- a/bootstrap-4/style.css
+++ b/bootstrap-4/style.css
@@ -5,3 +5,7 @@
     background: url('images/jumbo-inter.jpg') no-repeat center center;
     color: white;
 }
+
+.jumbotron {
+    border-radius: unset;
+}
