--- a/Projet Javascript - Hopital GrosBobo/style.css
+++ b/Projet Javascript - Hopital GrosBobo/style.css
@@ -8,7 +8,7 @@ h1 {
 
 #corpstext {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     margin: auto;
     width:50%;
     position: relative;
@@ -50,7 +50,7 @@ h1 {
 
 .cheville {
     left:70px;
-    bottom:30px;
+    top:430px;
 }
 
 .active {
@@ -62,6 +62,14 @@ h1 {
     display: none;
 }
 
-.shown {
-    display:flex;
+.shown { /*SHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUN*/
+    display:block;
+    margin-left: 20px;
+    text-align: justify;
+}
+
+@media screen and (max-width:540px) {
+    #corpstext {
+        flex-direction: column;
+    }
 }
